test/expected/explain_ii.out
explain inline int x
        ^
9: error: inline variables not supported in C
